docs: remove Java 25 references and --enable-preview flag requirement
- Update project to indicate compatibility with Java 21+
- Remove all --enable-preview flags from command examples
- Add version numbers to Java features list
- Update documentation links